Validation in REST API endpoints for surveys added